@@ -1,3 +1,7 @@
+2016-04-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added specific exceptions for Connector services, resolves #75923
+
 2016-04-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Refactored for TYPO3 CMS 7, resolves #75913
